# easy-regex

./: Cargo.toml  LICENSE  README.md
src/: collection.rs  error_descriptions.rs  error_handling.rs  group.rs  group_mod.rs  head_or_tail.rs  head_or_tail_mod.rs  lib.rs  list.rs  list_mod.rs  literal.rs  literal_exp_mod.rs  metacharacters.rs  settings_mod.rs
src/helpers/: html_pattern.rs  mod.rs  persian_pattern.rs
src/settings/: base.rs  group.rs  mod.rs
tests/: tests.rs
