[package]
name = "easy-regex"
version = "0.11.7"
edition = "2021"
authors = ["arian pourarian <arianpourarian@gmail.com>"]
description = "Make long regular expressions like pseudocodes"
documentation="https://docs.rs/easy-regex"
repository = "https://github.com/Arian94/easy-regex.git"
categories = ["text-processing", "development-tools"]
keywords = ["regex", "readable", "easy", "meta", "multi-language"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
